# toboggan

./: .gitignore  .mise.toml  Cargo.toml  DOCUMENTATION_EN.md  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
.mise-tasks/: demo
docs/: book.toml
docs/src/: SUMMARY.md  installation.md  introduction.md
docs/src/guide/: cli-troubleshooting.md  cli.md  creating-presentations.md  desktop.md  remote.md  server.md  showcase.md  tui.md  web.md
docs/src/reference/: architecture.md  configuration.md  crates.md  developer-overview.md  presentation-format.md
examples/: demo-terminal.toml
examples/demo-terminal/: 01-intro.md  01-pause.md  02-pause-options.md  02-terminal-dark.md  03-terminal-light.md  03-terminal.md  04-terminal-options.md  05-livecode.md  05-terminal-light.md  06-end.md  06-terminal-multi.md  07-notes.md  08-styling.md  09-frontmatter.md  10-end.md  _cover.md  title.md
slides_ex/outputs/: building_secure.toml
slides_ex/presentations/Building Secure Smart Contracts/: _cover.md
slides_ex/presentations/How to Fuzz Like a Pro/: How to Fuzz Like a Pro.toml  README.md
toboggan-cli/src/: display.rs  error.rs  lib.rs  stats.rs
toboggan-cli/src/output/: html.rs  renderer.rs  text.rs
toboggan-cli/src/parser/: comments.rs  config.rs  content.rs  (+3 more)
toboggan-client/src/: communication.rs
toboggan-core/src/: config.rs  lib.rs  slide.rs  terminal.rs  timeouts.rs
toboggan-desktop/: Cargo.toml
toboggan-desktop/src/: app.rs  constants.rs  icons.rs  state.rs  styles.rs  widgets.rs
toboggan-desktop/src/views/: content.rs  footer.rs  help.rs  mod.rs  sidebar.rs  slide.rs
toboggan-mobile/examples/: test_ios.rs
toboggan-mobile/src/: types.rs
toboggan-py/: Cargo.toml
toboggan-server/: Cargo.toml  build.rs  openapi.json
toboggan-server/src/: settings.rs  state_tests.rs
toboggan-server/tests/: generate_openapi.rs  multi_client_sync.rs
toboggan-stats/src/: analysis.rs  slide_stats.rs
toboggan-tui/: Cargo.toml
toboggan-tui/src/: app.rs  connection_handler.rs  effects.rs  events.rs  lib.rs  state.rs
toboggan-web/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
toboggan-web/src/: main.ts
toboggan-web/toboggan-wasm/: Cargo.toml
(+38 files in other folders)
